<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#33691e">

    <TextView
        android:id="@+id/weather_fragment_city_name"
        android:text="@string/city_name_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/weather_fragment_refresh_data"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/weather_fragment_weather_description"
        android:text="@string/weather_description"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/weather_fragment_city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:id="@+id/weather_fragment_refresh_data"
        android:contentDescription="@string/refresh_weather_data_description"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/baseline_autorenew_black_48dp"
        app:layout_constraintStart_toEndOf="@id/weather_fragment_city_name"
        app:layout_constraintTop_toTopOf="@id/weather_fragment_city_name"
        app:layout_constraintBottom_toBottomOf="@id/weather_fragment_city_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"/>

    <ImageView
        android:id="@+id/weather_fragment_weather_image"
        android:contentDescription="@string/weather_fragment_weather_image_description"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weather_fragment_weather_description"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:id="@+id/weather_fragment_min_temp_text"
        android:text="@string/min_temp_text"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/weather_fragment_min_temp"
        app:layout_constraintBottom_toBottomOf="@id/weather_fragment_min_temp"
        android:layout_marginEnd="4dp"/>

    <TextView
        android:id="@+id/weather_fragment_min_temp"
        android:text="@string/temp_test_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/weather_fragment_weather_image"
        app:layout_constraintBottom_toBottomOf="@id/weather_fragment_weather_image"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/weather_fragment_max_temp_text"
        android:text="@string/max_temp_text"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/weather_fragment_weather_image"
        app:layout_constraintBottom_toBottomOf="@id/weather_fragment_weather_image"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/weather_fragment_max_temp"
        android:text="@string/temp_test_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/weather_fragment_max_temp_text"
        app:layout_constraintBottom_toBottomOf="@id/weather_fragment_max_temp_text"
        android:layout_marginStart="4dp"/>

    <TextView
        android:id="@+id/weather_fragment_current_temp_text"
        android:text="@string/current_temp_text"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/weather_fragment_weather_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/weather_fragment_current_temp"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"/>

    <TextView
        android:id="@+id/weather_fragment_current_temp"
        android:textSize="20sp"
        android:text="@string/temp_test_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/weather_fragment_current_temp_text"
        app:layout_constraintStart_toEndOf="@id/weather_fragment_current_temp_text"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/weather_fragment_humidity_text"
        android:text="@string/humidity_text"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/weather_fragment_humidity"
        app:layout_constraintTop_toBottomOf="@id/weather_fragment_current_temp_text"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/weather_fragment_humidity"
        android:textSize="20sp"
        android:text="@string/temp_test_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/weather_fragment_humidity_text"
        app:layout_constraintBottom_toBottomOf="@id/weather_fragment_humidity_text"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/weather_fragment_pressure_text"
        android:text="@string/pressure_text"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/weather_fragment_pressure"
        app:layout_constraintTop_toBottomOf="@id/weather_fragment_humidity_text"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/weather_fragment_pressure"
        android:textSize="20sp"
        android:text="@string/temp_test_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/weather_fragment_pressure_text"
        app:layout_constraintBottom_toBottomOf="@id/weather_fragment_pressure_text"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/weather_fragment_wind_direction"
        android:contentDescription="@string/wind_direction_arrow_text"
        android:background="@drawable/baseline_navigation_black_48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/weather_fragment_pressure_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/weather_fragment_wind_text"
        android:text="@string/wind_text"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/weather_fragment_wind"
        app:layout_constraintTop_toBottomOf="@id/weather_fragment_wind_direction"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/weather_fragment_wind"
        android:textSize="20sp"
        android:text="@string/temp_test_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/weather_fragment_wind_text"
        app:layout_constraintBottom_toBottomOf="@id/weather_fragment_wind_text"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/weather_fragment_five_day_data_button"
        android:text="@string/_5_day_data_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weather_fragment_wind_text"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>